SB-12280 style: MCQ layout alignment issues fixed

--- a/org.ekstep.questionunit-1.1/renderer/components/css/components.css
+++ b/org.ekstep.questionunit-1.1/renderer/components/css/components.css
@@ -379,7 +379,8 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 7%;
+    width: 50%;
+    max-width: 32px;
 }
 
 .question-container-big .text-image-container .image-container.no-text {
